--- a/index.html
+++ b/index.html
@@ -1,62 +1,120 @@
-<!DOCTYPE html>
-<html lang="en">
- <head>
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <meta charset="UTF-8">
-  <title>My Web Page</title>
- </head>
- <body>
-"display-2">Display 2</h1>
-<h1 class="display-3">Display 3</h1>
-<h1 class="display-4">Display 4</h1>
- <h1 class="display-1">My First Website</h1>
- <h1 class="display-2">My favorite fruit.</h1>
- <ul>
-  <li>apples</li>
-  <li>oranges</li>
-  <li>pineapples</li>
- </ul>
- <table border="1"cellpadding="10"cellspacing="0">
-  <tr>
-   <th>Month</th>
-   <th>Rent</th>
-   <th>Eating Out</th>
-   <th>Groceries</th>
-   </tr>
-  <tr>
-   <td>August</td>
-   <td>$1500</td>
-   <td>$150</td>
-   <td>$350</td>
-  </tr>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="1.PNG.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="2.PNG.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="3.PNG.png" class="d-block w-100" alt="...">
-    </div>
+<!doctype html>
+<html lang="ch">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>早茂草戊</title>
+  </head>
+  <body>
+    <!--navigation -->
+    <nav class="navbar navbar-expaned-md navbar-light bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="IMAGE/icon.jpg" width=100></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarResponsive">早茂草戊
+      <span calss="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse Navbar-collapse" id="NavbarResponsive">
+        <ul class="list-group list-group-horizontal-sm">
+          <li class="list-group-item active">首页</li>
+          <li class="list-group-item">建设中</li>
+          <li class="list-group-item">建设中</li>
+          <li class="list-group-item">建设中</li>
+          <li class="list-group-item">建设中</li>
+  </ul>
+        </ul>
+      </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+</nav>
+<div class="bd-example">
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="IMAGE/page2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">图源来自网络</h5>
+          <p class="text-dark">图源来自网络</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="image/page3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">图源来自网络</h5>
+          <p class="text-dark">图源来自网络</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="image/page4.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark">图源来自网络</h5>
+          <p class="text-dark">图源来自网络</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
+<div class="container=fluid">
+  <div class="row jumbotron">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-2">
+      <blockquote class="blockquote">
+        <h3 class="lead">飞光飞光，劝尔一杯酒。<br>
+      吾不识青天高，黄地厚。<br>
+      唯见月寒日暖，来煎人寿。<br>
+      食熊则肥，食蛙则瘦。<br>
+      神君何在？太一安有？<br>
+      天东有若木，下置衔烛龙。<br>
+      吾将斩龙足，嚼龙肉，使之朝不得回，夜不得伏。<br>
+      自然老者不死，少者不哭。<br>
+      何为服黄金、吞白玉？<br>
+      谁似任公子，云中骑碧驴？<br>
+      刘彻茂陵多滞骨，嬴政梓棺费鲍鱼。
+    </h3>
+  <footer class="blockquote-footer">李贺 <cite title="Source Title">《苦昼短》</cite></footer>
+</blockquote>
+</div>
+<br>
+    <div align="left">
+      <p>燕池-《苦昼短》</p>
+    <audio controls="controls" >
+    <source src="IMAGE/燕池-苦昼短.mp3">
+    </audio>
+  </div>
+  <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+    <a href="#"><button type="button" calss="btn btn-outline-secondary btn-lg">回到顶部</button></a>
+  </div>
+  </div>
+</div>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  </body>
+  <footer>
+    <div class="contianer-fluild">
+      <div class="row text-center">
+        <div class="col-md-12">
+          <img src="image/icon.jpg" width=100>
+          <hr class="light">
+          <p>QQ:1322750111</p>
+          <p>Email:132270111@qq.com</p>
+          <p>欢迎扩列~</p>
+        </div>
+
+      </div>
+
+    </div>
+  </footer>
 </html>
