--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="contianer-fluild">
       <div class="row text-center">
         <div class="col-md-12">
-          <img src="IMAGE/icon.jpg" width=100>
+          <img src="IMAGE/icon2.jpg" width=100>
           <hr class="light">
           <p>QQ:1322750111</p>
           <p>Email:132270111@qq.com</p>
